# ProjectTemplate

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .secrets.baseline  LICENSE  README.md  README_TEMPLATE.md  bootstrap.py  pyproject.toml
.claude/rules/: bootstrap.md  code-style.md  source-code.md  workflow.md
.claude/skills/bootstrap/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: docs.yml  publish.yml  release.yml  slow-tests.yml  test.yml
.hooks/: pre-push-ruff-check.sh  pre-push-ruff-format.sh
.planning/: BOOTSTRAP.md
docs/: conf.py  contributing.md
src/mypackage/: __init__.py
tests/unit/: test_smoke.py
